style/room.css
/* ... */
.talk-previous.loading {
    color: #CCC;
    cursor: default;
}

/* Reply form */
.talk-reply {
    height: 78px;
}
.talk-reply .sticky {
    position: fixed;
    bottom: 0;
    z-index: 1;
    width: 100%;
    -webkit-font-smoothing: subpixel-antialiased;
}
.talk-reply .content {
    position: relative;
    margin-left: 25%;
    padding: 9px 0 11px;
    background: #FFF;
    box-shadow: 0 -1px 0 rgba(0,0,0,0.18);
    transition: box-shadow .5s;
}
.reply-wrapper {
    position: relative;
    margin: 0 100px 0 28px;
    border: 1px solid #FFF;
    padding: 8px 19px 6px 67px;
}
.reply-public {
    display: none;
    position: absolute;
    top: 0;
    right: 0;
    padding: 2px 8px 3px 5px;
    font-weight: 300;
    font-size: 22px;
    line-height: 22px;
    color: #B3ACA1;
    cursor: pointer;
}
.reply-private {
    border-color: #EDE8DA;
    border-radius: 4px;
    background: #F0ECE1;
}
.reply-private .reply-public {
    display: block;
}
.reply-wrapper .userpic {
    visibility: hidden;
    position: absolute;
    left: 11px;
    top: 8px;
}
.reply-recipient {
    display: none;
    padding-top: 0;
    margin-bottom: 4px;
    font-size: 14px;
    line-height: 16px;
    word-wrap: break-word;
    color: #B3ACA1;
}
.reply-private .reply-recipient {
    display: block;
}
.reply-field {
    position: relative;
}
.reply-field textarea {
    display: block;
    width: 100%;
    height: 42px;
    margin: 0;
    padding: 0;
    border: none;
    background: transparent;
    resize: none;
    outline: none;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    -webkit-tap-highlight-color: transparent;
    -webkit-font-smoothing: inherit;
}
.reply-private textarea {
    height: 22px;
}
.reply-send {
    position: absolute;
    right: 0;
    top: 10px;
    width: 90px;
    height: 58px;
    border-left: 1px dotted #C5C5C5;
    cursor: pointer;
}

/* Edit form */
.talk-edit {
    display: none;
    position: absolute;
    top: -3px;
    margin: 0 -8px 1px;
    border-radius: 3px;
    padding: 3px 8px;
    overflow: hidden;
    background: #FFF;
    box-shadow: 0 1px 5px rgba(0,0,0,0.06), 0 0 0 1px rgba(0,0,0,0.05);
    opacity: 0;
}
.talk-edit textarea {
    display: block;
    width: 100%;
    height: 21px;
    margin: 0;
    padding: 0;
    border: none;
    background: transparent;
    resize: none;
    outline: none;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    -webkit-tap-highlight-color: transparent;
    -webkit-font-smoothing: inherit;
}
.personal .talk-edit {
    background: #faf9f5;
}
.editing .msg-text {
    display: none;
}
.message .talk-edit {
    display: block;
}
.editing .talk-edit {
    position: relative;
    opacity: 1;
}

/* Disconnect */
.disconnected .talk-reply .content {
    box-shadow: 0 -1px 0 #ca3c30;
}

/* Date */
.date {
    font-size: 13px;
    line-height: 16px;
    text-align: center;
    color: #999999;
}
.talk-messages .date {
    margin: -5px 5px 16px;
    border-bottom: 1px solid #CCCCCC;
    box-shadow: 0 1px 0 #FFFFFF;
}
.date-text {
    position: relative;
    top: 7px;
    padding: 0 14px;
    background: #F6F6F6;
    cursor: default;
}
.talk-header .date-text {
    padding: 0 14px 4px;
    border-radius: 0 0 11px 11px;
    box-shadow: 0 1px 2px rgba(0,0,0,0.18);
}
.talk-header .date-text:after {
    content: '';
    position: absolute;
    left: -4px;
    top: -3px;
    width: 100%;
    height: 8px;
    border: 4px solid #f6f6f6;
    border-bottom: none;
}

/* Speech */
.speech {
    position: relative;
    margin: 5px 100px 5px 28px;
    padding: 7px 20px 1px 68px;
}
.speech-author {
    position: relative;
    padding-top: 3px;
    margin-bottom: 3px;
    font-size: 14px;
    line-height: 16px;
    word-wrap: break-word;
}
.speech-author > .userpic {
    position: absolute;
    left: -56px;
    top: 2px;
    z-index: 1;
    cursor: pointer;
}
.speech-author > .nickname {
    color: #0F6799;
    cursor: pointer;
}

/* Personal messages */
.speech.personal {
    border: 1px solid #EDE8DA;
    border-radius: 4px;
    padding: 6px 19px 0 67px;
    background: #F0ECE1;
}
.speech-recipient {
    color: #B3ACA1;
    cursor: pointer;
}

/* Message */
.message {
    position: relative;
}
.message:before {
    content: '';
    position: absolute;
    left: -34px;
    top: 12px;
    width: 16px;
    border-top: 1px solid #909090;
}
.msg-time {
    position: absolute;
    top: 5px;
    right: -80px;
    font-size: 12px;
    line-height: 14px;
    color: #B8B8B8;
}
.msg-text {
    margin: 0 0 7px;
    word-wrap: break-word;
}
.msg-text em {
    font-style: italic;
    font-family: 'PT Serif', 'Georgia', serif;
}

/* Nickname marker */
.with-my-name::after {
    content: '';
    position: absolute;
    top: 6px;
    left: -83px;
    width: 14px;
    height: 11px;
    background: url('tome.svg') no-repeat;
}

/* Edit messages */
.msg-edit {
    margin-right: -20px;
    padding: 0 10px;
    cursor: pointer;
    background: url("edit_message.svg") no-repeat 6px 7px;
    opacity: 0.5;
    transition: opacity .15s;
}
.msg-edit:hover {
    opacity: 1;
}

/* Talk for me */
.for-me-only .message {
    display: none;
}
.for-me-only .for-me {
    display: block;
}

/* Users */
.room-users {
    display: none;
    margin-left: 26px;
    padding: 0 0 95px;
    -webkit-tap-highlight-color: rgba(0,0,0,0);
}
.users-group {
    margin: 18px 0 20px;
}
.users-title {
    margin: 0 0 10px;
    font-weight: normal;
    font-size: 14px;
    line-height: 16px;
    color: #858482;
}
.users-amount {
    margin-left: 3px;
    color: #B3B1AF;
}
.users-list {
    margin-left: 34px;
}

/* User */
.user {
    border-bottom: 1px solid #CECCCA;
    box-shadow: 0 1px 0 #F3F1F0;
    padding: 8px 20px 8px 0;
    line-height: 20px;
    word-wrap: break-word;
}
.user > .userpic {
    position: absolute;
    width: 22px;
    height: 22px;
    margin: -2px 0 0 -34px;
    background-size: 24px;
    border-radius: 3px;
    cursor: pointer;
}
/* ... */

